--- a/FJYL.Web/index.html
+++ b/FJYL.Web/index.html
@@ -33,7 +33,7 @@
                 <p>公司实行现代化经营模式，管理制度完善，组织机构健全，公司下设综合办公室、设计部、工程部、预算 部、计划经营部等职能机构；公司自成立伊始大力实施人才战略，积极推动引进人才、培养人才.</p>
             </div>
             <div class="col4">
-                <h2>设计理念</h2>
+                <h2>设计理念22222222</h2>
                 <div class="icon-pencil"></div>
                 <p>公司实行现代化经营模式，管理制度完善，组织机构健全，公司下设综合办公室、设计部、工程部、预算 部、计划经营部等职能机构；公司自成立伊始大力实施人才战略，积极推动引进人才、培养人才.</p>
             </div>
