--- a/FJYL.Web/contact.html
+++ b/FJYL.Web/contact.html
@@ -1,35 +1,65 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+﻿<!DOCTYPE HTML PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>AiYi page</title>
+    <title>富景园林</title>
     <link href="css/aiyi.css" rel="stylesheet" type="text/css" />
-    <script type='text/javascript' src='js/jquery-1.8.3.min.js'></script>
-    <script type='text/javascript' src='js/aiyi.js'></script>
+    <link href="css/slider.css" rel="stylesheet" type="text/css" />
+    <link href="css/lightbox.css" rel="stylesheet" type="text/css" />
+    <script type='text/javascript' src='/scripts/aiyi.js'></script>
+    <script type='text/javascript' src='/scripts/lightbox.min.js'></script>
 </head>
 <body>
     <div id="header">
         <div class="wrap">
-            <a href="/" class="logo"><img src="img/logo.png" alt="logo" /></a>
+            <a href="/" class="logo"><img src="/img/logo.png" alt="logo" /></a>
             <ul class="menu">
-                <li><a href="#" class="active">首页</a></li>
-                <li><a href="#">关于我们</a></li>
-                <li><a href="#">成功案例</a></li>
-                <li><a href="#">招聘信息</a></li>
-                <li><a href="#">联系我们</a></li>
+                <li class="first"><a href="/">首页</a></li>
+                <li><a href="/about.html">公司简介</a></li>
+                <li><a href="/case.html">成功案例</a></li>
+                <li><a href="/job.html">招聘信息</a></li>
+                <li><a href="/contact.html" class="active">联系我们</a></li>
             </ul>
         </div>
     </div>
-    <div id="sildeshow">
-        <img src="img/slide1.jpg" alt="" />
+    <div class="clear"></div>
+    <div class="subpage_nav">
+        <div class="contentZ">
+            <img src="/img/marqueeico.jpg" style="margin-top:10px;float:left;" />
+            <p>富景园林秉承"服务最佳、质量最好"的理念，竭诚为您服务，欢迎前来合作洽谈。</p>
+        </div>
     </div>
-    <div id="content">
-        <!--ReplaceStart--> 
- <h1 style="font-size: 32px; font-weight: bold; border-bottom: 2px solid rgb(204, 204, 204); padding: 0px 4px 0px 0px; text-align: center; margin: 0px 0px 20px;" label="标题居中">联系我们<br/></h1><p>FJ 园林</p><p><img alt="logo.png" src="/scripts/ueditor/net/upload/image/20150312/6356177513428270497432535.png" title="logo.png"/></p> 
- <!--ReplaceEnd-->
+
+    <!--ReplaceStart-->
+    <div id="content" style="width:1030px;font-size:14px;">
+        <div class="flPanel">
+            <div class="subcontact">
+                <div class="contacttit">
+                    <div class="titlename1">联系我们</div>
+                    <div class="contactcon2">
+                        <p>地址：大连开发区本溪东街新日里2#</p>
+                        <p>工程洽谈： 18041175567</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="frPanel">
+            <div class="righttitle"><div class="titlename1">联系方式</div></div>
+            <p style="margin-bottom:10px;margin-top:30px;">联系地址：大连开发区本溪东街新日里2#</p>
+            <p style="margin-bottom:10px;">工程洽谈： 18041175567</p>
+            <p style="margin-bottom:10px;">公司网址： DLFJYLJG.COM</p>
+            <p style="margin-bottom:10px;">电子邮箱：FJYL2007@163.COM</p>
+            <p style="margin-bottom:10px;">公司业务QQ:2629631831</p>
+        </div> 
     </div>
+    <!--ReplaceEnd-->
+    
+    <div class="clear"></div>
     <div id="footer">
-        <p> aiyi@2015</p>
-    </div>
+        <p>富景园林 版权所有 Copyright © 2010-2015 </p>
+        <p>联系地址：大连开发区本溪东街新日里2#</p>
+        <p>工程洽谈： 18041175567 设计咨询： 13898688531 传真电话：(0411)87650986 </p>
+        <p>公司网址： DLFJYLJG.COM 电子邮箱：FJYL2007@163.COM 公司业务QQ:2629631831</p>
+    </div>    
 </body>
 </html>
