--- a/FJYL.Web/about.html
+++ b/FJYL.Web/about.html
@@ -2,32 +2,91 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>AiYi page</title>
+    <title>富景园林</title>
     <link href="css/aiyi.css" rel="stylesheet" type="text/css" />
-    <script type='text/javascript' src='js/jquery-1.8.3.min.js'></script>
-    <script type='text/javascript' src='js/aiyi.js'></script>
+    <link href="css/slider.css" rel="stylesheet" type="text/css" />
+    <link href="css/lightbox.css" rel="stylesheet" type="text/css" />
+    <script type='text/javascript' src='/scripts/aiyi.js'></script>
+    <script type='text/javascript' src='/scripts/lightbox.min.js'></script>
 </head>
 <body>
     <div id="header">
         <div class="wrap">
-            <a href="/" class="logo"><img src="img/logo.png" alt="logo" /></a>
+            <a href="/" class="logo"><img src="/img/logo.png" alt="logo" /></a>
             <ul class="menu">
-                <li><a href="#" class="active">首页</a></li>
-                <li><a href="#">关于我们</a></li>
-                <li><a href="#">成功案例</a></li>
-                <li><a href="#">招聘信息</a></li>
-                <li><a href="#">联系我们</a></li>
+                <li class="first"><a href="/">首页</a></li>
+                <li><a href="/about.html" class="active">公司简介</a></li>
+                <li><a href="/case.html">成功案例</a></li>
+                <li><a href="/job.html">招聘信息</a></li>
+                <li><a href="/contact.html">联系我们</a></li>
             </ul>
         </div>
     </div>
-    <div id="sildeshow">
-        <img src="img/slide1.jpg" alt="" />
+    <div class="clear"></div>
+    <div class="subpage_nav">
+        <div class="contentZ">
+            <img src="/img/marqueeico.jpg" style="margin-top:10px;float:left;" />
+            <p>富景园林秉承"服务最佳、质量最好"的理念，竭诚为您服务，欢迎前来合作洽谈。</p>
+        </div>
     </div>
-    <div id="content">
-        <!--ReplaceStart--><h1 style="font-size: 32px; font-weight: bold; border-bottom: 2px solid rgb(204, 204, 204); padding: 0px 4px 0px 0px; text-align: center; margin: 0px 0px 20px;" label="标题居中">联系我们<br/></h1><p>FJ 园林<br/></p><!--ReplaceEnd-->
-    </div>
+    <!--ReplaceStart-->
+    <div id="content" style="width:1030px;font-size:14px;">        
+        <div class="flPanel">
+            <div class="subcontact">
+                <div class="contacttit">
+                    <div class="titlename1">联系我们</div>
+                    <div class="contactcon2">
+                        <p>地址：大连开发区本溪东街新日里2#</p>
+                        <p>工程洽谈： 18041175567</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="frPanel">
+            <div class="righttitle"><div class="titlename1">公司简介</div></div>
+            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;富景园林注册地大连经济技术开发区（金州新区），城市园林绿化三级资质，公司自有苗圃占地面积200亩以上，是一家专业从事园林景观设计、施工、养护于一体的全产业链公司。年平均绿化面积达几十万平，土建景观施工数万平。</p>
+            <p>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;富景园林积极把握园林市场的客户需求，凭着富景园林优秀的设计团队，精湛的施工队伍，迅速赢得了客户的好评。业绩遍布房地产项目、别墅私家庭院、公园、高端会所及商业景观等领域。迄今为止，富景园林的客户网络已经覆盖东北及大连周边多省市，在材料及苗木方面通过建立建全规模化采购、运输、等一站式渠道，极大的降低中间消耗，把更多的利润空间让利给客户。充分体现追求精益求精设计理念，并取得了令人满意的园林景观，形成了设计指导施工，施工是设计的延伸和完善的互动体系。公司集开发咨询与景观设计为一体，为黑龙江科技大学城市规划及风景园林专业的定点实习基地，校企联合力求商业与艺术相结合，开展商业策划与景观规划相结合，创造具有时代气息、有社会实用价值的景观，实现对项目开发的有效服务。
+            </p>
+            <p>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;团队方面，经过不断发展，富景园林在设计上逐渐积累了一批优秀的核心团队，整合业界最高端人才，提供最综合的设计解决方案；在施工上，优选专业技术工人，为如实表现设计理念提供了必备保障。这为富景园林带来了广阔的发展空间，并为富景园林实现中国最前端的景观公司目标奠定了基础。
+            </p>
+            <p>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;富景园林以“成为中国景观行业领先企业”为公司愿景，竭诚为客户服务，以人为本，诚信经营，愿生活处处美景，为人类创造更惬意的人居环境，是我们每位富景人的追求。
+            </p>
+            <p>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;景观设计工作室隶属大连富景园林景观工程有限公司。这是一个年轻的集体，一个把握时代脉搏的景观设计精英队伍!设计人员均来自行业精英的设计师及资深规划师，具有丰富的设计经验和极高的专业素养!工作室成立至今已承接多个设计项目，与多家委托设计客户建立了长期合作，相互信任．共同发展建立了良好的合作关系。我们的宗旨是： 用智慧和实力创造文化品位的景观，知识和实践间架起艺术的桥梁。
+            </p>
+            <p>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;附：主要承揽全国景观规划设计项目
+                园林工程总承包、各类综合性室内外硬质景观绿化设计、施工；
+                园林古建、风景区、商业区、居住区、别墅区园林施工、维护；
+                现代园林景观、古典艺术造园、绿地养护；装饰装修工程施工；
+                城镇景观规划、雕塑小品、拟木假山塑石、凉亭、喷泉水体瀑布；
+                市政工程施工；苗木花卉、盆景生产经营；园林技术服务咨询；
+
+            </p>
+            <div class="lightBoxWrap">
+                <div class="image-row">
+                    <div class="image-set">
+                        <a class="example-image-link" href="/img/zizhi/aaa.jpg" data-lightbox="example-set" data-title="法人代表证"><img class="example-image" src="/img/zizhi/aa.jpg" alt="" /></a>
+                        <a class="example-image-link" href="/img/zizhi/bbb.jpg" data-lightbox="example-set" data-title="税务登记证副本."><img class="example-image" src="/img/zizhi/bb.jpg" alt="" /></a>
+                        <a class="example-image-link" href="/img/zizhi/ccc.jpg" data-lightbox="example-set" data-title="银行开户许可证."><img class="example-image" src="/img/zizhi/cc.jpg" alt="" /></a>
+                        <br />
+                        <a class="example-image-link" href="/img/zizhi/ddd.jpg" data-lightbox="example-set" data-title="营业执照副本."><img class="example-image" src="/img/zizhi/dd.jpg" alt="" /></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>    
+    <!--ReplaceEnd-->
+
+    <div class="clear"></div>
     <div id="footer">
-        <p> aiyi@2015</p>
-    </div>
+        <p>富景园林 版权所有 Copyright © 2010-2015 </p>
+        <p>联系地址：大连开发区本溪东街新日里2#</p>
+        <p>工程洽谈： 18041175567 设计咨询： 13898688531 传真电话：(0411)87650986 </p>
+        <p>公司网址： DLFJYLJG.COM 电子邮箱：FJYL2007@163.COM 公司业务QQ:2629631831</p>
+    </div> 
 </body>
 </html>
