--- a/FJYL.Web/index.html
+++ b/FJYL.Web/index.html
@@ -1,57 +1,76 @@
 ﻿<!DOCTYPE HTML PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>AiYi page</title>
-    <link href="css/aiyi.css" rel="stylesheet" type="text/css" />
-    <script type='text/javascript' src='js/jquery-1.8.3.min.js'></script>
-    <script type='text/javascript' src='js/aiyi.js'></script>
-</head>
-<body>
-    <div id="header">
-        <div class="wrap">
-            <a href="/" class="logo"><img src="img/logo.png" alt="logo" /></a>
-            <ul class="menu">
-                <li><a href="#" class="active">首页</a></li>
-                <li><a href="#">关于我们</a></li>
-                <li><a href="#">成功案例</a></li>
-                <li><a href="#">招聘信息</a></li>
-                <li><a href="#">联系我们</a></li>
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        <title>富景园林</title>
+
+        <link href="/css/aiyi.css" rel="stylesheet" type="text/css" />
+        <link href="/css/slider.css" rel="stylesheet" type="text/css" />
+        <link href="/css/lightbox.css" rel="stylesheet" type="text/css" />
+        <script type='text/javascript' src='/scripts/aiyi.js'></script>
+        <script type='text/javascript' src='/scripts/jquery.flexslider-min.js'></script>
+        <script type='text/javascript' src='/scripts/lightbox.min.js'></script>
+    </head>
+    <body>
+        <div id="header">
+            <div class="wrap">
+                <a href="/" class="logo"><img src="/img/logo.png" alt="logo" /></a>
+                <ul class="menu">
+                    <li class="first"><a href="/" class="active">首页</a></li>
+                    <li><a href="/about.html">公司简介</a></li>
+                    <li><a href="/case.html">成功案例</a></li>
+                    <li><a href="/job.html">招聘信息</a></li>
+                    <li><a href="/contact.html">联系我们</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="flexslider">
+            <ul class="slides">
+                <li style="background:url(img/img1.jpg) 50% 0 no-repeat;"></li>
+                <li style="background:url(img/img2.jpg) 50% 0 no-repeat;"></li>
+                <li style="background:url(img/img3.jpg) 50% 0 no-repeat;"></li>
+                <li style="background:url(img/img4.jpg) 50% 0 no-repeat;"></li>
             </ul>
         </div>
-    </div>
-    <div id="sildeshow">
-        <img src="img/slide1.jpg" alt="" />
-    </div>
-    <div id="content">
-        <h1>我们的设计</h1>
-        <p class="depict">公司实行现代化经营模式，管理制度完善，组织机构健全，公司下设综合办公室、设计部、工程部、预算 部、计划经营部等职能机构；公司自成立伊始大力实施人才战略，积极推动引进人才、培养人才、用好人才的 相关工作，现公司各部门管理人员和专业技术人员均有大专以上学历或中、高级职称，现有高级工程师2人、园 林设计师12人、各项专业工程师3人、中高级技工15人，组建成为一支知识技能专业化、.</p>
-        <div class="feature">
-            <div class="col4">
-                <h2>设计理念11112222</h2>
-                <div class="icon-pencil"></div>
-                <p>公司实行现代化经营模式，管理制度完善，组织机构健全，公司下设综合办公室、设计部、工程部、预算 部、计划经营部等职能机构；公司自成立伊始大力实施人才战略，积极推动引进人才、培养人才.</p>
+        <div class="clear"></div>
+        <div id="content">
+            <div class="feature">
+                <div class="col3" style="margin-left:20px">
+                    <h2>设计理念</h2>
+                    <img src="/img/pic1.jpg" class="icon-pencil" />
+                    <p>&nbsp;&nbsp;&nbsp;&nbsp;合理的布局,优越的地形,造就无与伦比的景观效果, 人性化的设计,先进的理念,打造休闲娱乐的天堂!.</p>
+                </div>
+                <div class="col3">
+                    <h2>客户为主</h2>
+                    <img src="/img/pic2.jpg" class="icon-pencil" />
+                    <p>
+                        &nbsp;&nbsp;&nbsp;&nbsp;
+                        寻求自然轨迹，品鉴新古典主义，结合地方特色和现有地形，演绎南加州风情生活主题！.
+                    </p>
+                </div>
+                <div class="col3" style="margin-right:0px">
+                    <h2>景观特点</h2>
+                    <img src="/img/pic3.jpg" class="icon-pencil" />
+                    <p>&nbsp;&nbsp;&nbsp;&nbsp;园林景观小品具有精美、灵巧和多样化的特点，设计创作时可以做到“景到随机，不拘一格”，在有限空间得其天趣.</p>
+                </div>
             </div>
-            <div class="col4">
-                <h2>设计理念22222222</h2>
-                <div class="icon-pencil"></div>
-                <p>公司实行现代化经营模式，管理制度完善，组织机构健全，公司下设综合办公室、设计部、工程部、预算 部、计划经营部等职能机构；公司自成立伊始大力实施人才战略，积极推动引进人才、培养人才.</p>
-            </div>
-            <div class="col4">
-                <h2>设计理念</h2>
-                <div class="icon-pencil"></div>
-                <p>公司实行现代化经营模式，管理制度完善，组织机构健全，公司下设综合办公室、设计部、工程部、预算 部、计划经营部等职能机构；公司自成立伊始大力实施人才战略，积极推动引进人才、培养人才.</p>
-            </div>
-            <div class="col4">
-                <h2>设计理念</h2>
-                <div class="icon-pencil"></div>
-                <p>公司实行现代化经营模式，管理制度完善，组织机构健全，公司下设综合办公室、设计部、工程部、预算 部、计划经营部等职能机构；公司自成立伊始大力实施人才战略，积极推动引进人才、培养人才.</p>
-            </div>
-            <div class="clear"></div>
         </div>
-    </div>
-    <div id="footer">
-        <p> aiyi@2015</p>
-    </div>
-</body>
+
+        <div class="clear"></div>
+        <div id="footer">
+            <p>富景园林 版权所有 Copyright © 2010-2015 </p>
+            <p>联系地址：大连开发区本溪东街新日里2#</p>
+            <p>工程洽谈： 18041175567 设计咨询： 13898688531 传真电话：(0411)87650986 </p>
+            <p>公司网址： DLFJYLJG.COM 电子邮箱：FJYL2007@163.COM 公司业务QQ:2629631831</p>
+        </div>  
+
+        <script type="text/javascript">
+            $(function () {
+                $('.flexslider').flexslider({
+                    directionNav: true,
+                    pauseOnAction: false
+                });
+            });
+        </script>
+    </body>
 </html>
