--- a/FJYL.Web/job.html
+++ b/FJYL.Web/job.html
@@ -2,32 +2,78 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>AiYi page</title>
+    <title>富景园林</title>
     <link href="css/aiyi.css" rel="stylesheet" type="text/css" />
-    <script type='text/javascript' src='js/jquery-1.8.3.min.js'></script>
-    <script type='text/javascript' src='js/aiyi.js'></script>
+    <link href="css/slider.css" rel="stylesheet" type="text/css" />
+    <link href="css/lightbox.css" rel="stylesheet" type="text/css" />
+    <script type='text/javascript' src='/scripts/aiyi.js'></script>
+    <script type='text/javascript' src='/scripts/lightbox.min.js'></script>
 </head>
 <body>
     <div id="header">
         <div class="wrap">
-            <a href="/" class="logo"><img src="img/logo.png" alt="logo" /></a>
+            <a href="/" class="logo"><img src="/img/logo.png" alt="logo" /></a>
             <ul class="menu">
-                <li><a href="#" class="active">首页</a></li>
-                <li><a href="#">关于我们</a></li>
-                <li><a href="#">成功案例</a></li>
-                <li><a href="#">招聘信息</a></li>
-                <li><a href="#">联系我们</a></li>
+                <li class="first"><a href="/">首页</a></li>
+                <li><a href="/about.html">公司简介</a></li>
+                <li><a href="/case.html">成功案例</a></li>
+                <li><a href="/job.html" class="active">招聘信息</a></li>
+                <li><a href="/contact.html">联系我们</a></li>
             </ul>
         </div>
     </div>
-    <div id="sildeshow">
-        <img src="img/slide1.jpg" alt="" />
+    <div class="clear"></div>
+    <div class="subpage_nav">
+        <div class="contentZ">
+            <img src="/img/marqueeico.jpg" style="margin-top:10px;float:left;" />
+            <p>富景园林秉承"服务最佳、质量最好"的理念，竭诚为您服务，欢迎前来合作洽谈。</p>
+        </div>
     </div>
-    <div id="content">
-        <!--ReplaceStart--><h1 style="font-size: 32px; font-weight: bold; border-bottom: 2px solid rgb(204, 204, 204); padding: 0px 4px 0px 0px; text-align: center; margin: 0px 0px 20px;" label="标题居中">联系我们<br/></h1><p>FJ 园林<br/></p><!--ReplaceEnd-->
-    </div>
+
+    <!--ReplaceStart-->
+    <div id="content" style="width:1030px;font-size:14px;">
+        <div class="flPanel">
+            <div class="subcontact">
+                <div class="contacttit">
+                    <div class="titlename1">联系我们</div>
+                    <div class="contactcon2">
+                        <p>地址：大连开发区本溪东街新日里2#</p>
+                        <p>工程洽谈： 18041175567</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="frPanel">
+            <div class="righttitle"><div class="titlename1">招聘信息</div></div>
+            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;本公司有三级城市园林绿化施工资质，承接过各类景观设计施工，拥有丰富的实践经验。现诚招有实力合作伙伴，共同成长。</p>
+            <p style="margin-bottom:30px;">
+                <strong>A、本公司现招聘园林相关工程人员、造价员</strong><br />
+                1、人品端正，认真塌实，有活力。能吃苦耐劳、具有较好的沟通能力和团队协作能力，寻求合作,共图发展!待遇面议。
+                2、熟练行业软件，有业务经验，熟悉市场，懂得利用资源，有专业素养，熟悉园林设计、绘图懂相关园林景观工程预算。
+                3、另招聘实习生三名：园林景观规划专业毕业，人品端正，认真塌实，有一定学习能力和上进心。能力强者有项目奖金，不包吃住。
+            </p>
+            <p style="margin-bottom:30px;">
+                <strong>B、招聘长期绿化工，水电工，力工：</strong><br />
+                1、身体状况好、无不良嗜好，户口不限，须持身份证原件面试，待遇面议。
+                2、年龄55岁以下，主要从事绿化苗木栽植，养护及园林硬质景观施工；
+                3、要求能吃苦耐劳、具有较好的沟通能力和团队协作能力。
+            </p>
+            <p>
+                <strong>C、招聘货（水）车司机 </strong><br />
+                1、年龄28-40岁，5年以上实际驾驶经验，驾驶技术娴熟，驾驶B票（准驾证）或以上，待遇面议；　
+                2、无不良驾驶记录，无重大事故及交通违章；　
+                3、为人踏实、老实忠厚，责任心强，家住开发区优先考虑。
+            </p>
+        </div>
+    </div>    
+    <!--ReplaceEnd-->
+
+    <div class="clear"></div>
     <div id="footer">
-        <p> aiyi@2015</p>
-    </div>
+        <p>富景园林 版权所有 Copyright © 2010-2015 </p>
+        <p>联系地址：大连开发区本溪东街新日里2#</p>
+        <p>工程洽谈： 18041175567 设计咨询： 13898688531 传真电话：(0411)87650986 </p>
+        <p>公司网址： DLFJYLJG.COM 电子邮箱：FJYL2007@163.COM 公司业务QQ:2629631831</p>
+    </div>  
 </body>
 </html>
