--- a/FJYL.Web/about.html
+++ b/FJYL.Web/about.html
@@ -15,10 +15,12 @@
             <a href="/" class="logo"><img src="/img/logo.png" alt="logo" /></a>
             <ul class="menu">
                 <li class="first"><a href="/">首页</a></li>
-                <li><a href="/about.html" class="active">公司简介</a></li>
-                <li><a href="/case.html">成功案例</a></li>
+                <li><a href="/about.html">公司简介</a></li>
+                <li><a href="/honor.html">资质荣誉</a></li>
+                <li><a href="/case.html">经典案例</a></li>
                 <li><a href="/job.html">招聘信息</a></li>
                 <li><a href="/contact.html">联系我们</a></li>
+                <li><a href="/liuyan.html">留言板</a></li>
             </ul>
         </div>
     </div>
@@ -63,20 +65,9 @@
                 园林古建、风景区、商业区、居住区、别墅区园林施工、维护；
                 现代园林景观、古典艺术造园、绿地养护；装饰装修工程施工；
                 城镇景观规划、雕塑小品、拟木假山塑石、凉亭、喷泉水体瀑布；
-                市政工程施工；苗木花卉、盆景生产经营；园林技术服务咨询；
+                市政工程施工；苗木花卉、盆景生产经营；园林技术服务咨询
 
             </p>
-            <div class="lightBoxWrap">
-                <div class="image-row">
-                    <div class="image-set">
-                        <a class="example-image-link" href="/img/zizhi/aaa.jpg" data-lightbox="example-set" data-title="法人代表证"><img class="example-image" src="/img/zizhi/aa.jpg" alt="" /></a>
-                        <a class="example-image-link" href="/img/zizhi/bbb.jpg" data-lightbox="example-set" data-title="税务登记证副本."><img class="example-image" src="/img/zizhi/bb.jpg" alt="" /></a>
-                        <a class="example-image-link" href="/img/zizhi/ccc.jpg" data-lightbox="example-set" data-title="银行开户许可证."><img class="example-image" src="/img/zizhi/cc.jpg" alt="" /></a>
-                        <br />
-                        <a class="example-image-link" href="/img/zizhi/ddd.jpg" data-lightbox="example-set" data-title="营业执照副本."><img class="example-image" src="/img/zizhi/dd.jpg" alt="" /></a>
-                    </div>
-                </div>
-            </div>
         </div>
     </div>    
     <!--ReplaceEnd-->
