--- a/FJYL.Web/honor.html
+++ b/FJYL.Web/honor.html
@@ -31,9 +31,8 @@
             <p>富景园林秉承"服务最佳、质量最好"的理念，竭诚为您服务，欢迎前来合作洽谈。</p>
         </div>
     </div>
-
     <!--ReplaceStart-->
-    <div id="content" style="width:1030px;font-size:14px;">
+    <div id="content" style="width:1030px;font-size:14px;">        
         <div class="flPanel">
             <div class="subcontact">
                 <div class="contacttit">
@@ -46,30 +45,19 @@
             </div>
         </div>
         <div class="frPanel">
-            <div class="righttitle"><div class="titlename1">成功案例</div></div>
             <div class="lightBoxWrap">
                 <div class="image-row">
                     <div class="image-set">
-                        <a class="example-image-link" href="/img/anli/aa.jpg" data-lightbox="example-set" data-title="大连民族大学绿化工程"><img class="example-image" src="/img/anli/a.jpg" alt="" /><div>大连民族大学绿化工程</div></a>
-                        <a class="example-image-link" href="/img/anli/bb.jpg" data-lightbox="example-set" data-title="名仕智慧谷园林景观">
-                            <img class="example-image" src="/img/anli/b.jpg" alt="" />
-                            <div>名仕智慧谷园林景观</div>
-                        </a>
-                        <a class="example-image-link" href="/img/anli/cc.jpg" data-lightbox="example-set" data-title="南岔沟卢总别墅效果图"><img class="example-image" src="/img/anli/c.jpg" alt="" /><div>南岔沟卢总别墅效果图</div></a>
-                        <a class="example-image-link" href="/img/anli/dd.jpg" data-lightbox="example-set" data-title="鲅鱼圈秀山铭城景观方案"><img class="example-image" src="/img/anli/d.jpg" alt="" /><div>鲅鱼圈秀山铭城景观方案</div></a>
-                        <a class="example-image-link" href="/img/anli/ee.jpg" data-lightbox="example-set" data-title="壹高美郡小区">
-                            <img class="example-image" src="/img/anli/e.jpg" alt="" />
-                            <div>壹高美郡小区</div>
-                        </a>
-                        <a class="example-image-link" href="/img/anli/ff.jpg" data-lightbox="example-set" data-title="北府名苑"><img class="example-image" src="/img/anli/f.jpg" alt="" /><div>北府名苑</div></a>
-                        <a class="example-image-link" href="/img/anli/gg.jpg" data-lightbox="example-set" data-title="大连龙门旅游度假区某私人会所"><img class="example-image" src="/img/anli/g.jpg" alt="" /><div>大连龙门旅游度假区某私人会所</div></a>
-                        <a class="example-image-link" href="/img/anli/hh.jpg" data-lightbox="example-set" data-title="开发区佳能厂区职工宿舍区绿化"><img class="example-image" src="/img/anli/h.jpg" alt="" /><div>开发区佳能厂区职工宿舍区绿化</div></a>
-                        <a class="example-image-link" href="/img/anli/ii.jpg" data-lightbox="example-set" data-title="蓝湾吕总别墅庭院设计施工"><img class="example-image" src="/img/anli/i.jpg" alt="" /><div>蓝湾吕总别墅庭院设计施工</div></a>
+                        <a class="example-image-link" href="/img/zizhi/aaa.jpg" data-lightbox="example-set" data-title="法人代表证"><img class="example-image" src="/img/zizhi/aa.jpg" alt="" /></a>
+                        <a class="example-image-link" href="/img/zizhi/bbb.jpg" data-lightbox="example-set" data-title="税务登记证副本."><img class="example-image" src="/img/zizhi/bb.jpg" alt="" /></a>
+                        <a class="example-image-link" href="/img/zizhi/ccc.jpg" data-lightbox="example-set" data-title="银行开户许可证."><img class="example-image" src="/img/zizhi/cc.jpg" alt="" /></a>
+                        <br />
+                        <a class="example-image-link" href="/img/zizhi/ddd.jpg" data-lightbox="example-set" data-title="营业执照副本."><img class="example-image" src="/img/zizhi/dd.jpg" alt="" /></a>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
+    </div>    
     <!--ReplaceEnd-->
 
     <div class="clear"></div>
