--- a/FJYL.Web/job.html
+++ b/FJYL.Web/job.html
@@ -16,9 +16,11 @@
             <ul class="menu">
                 <li class="first"><a href="/">首页</a></li>
                 <li><a href="/about.html">公司简介</a></li>
-                <li><a href="/case.html">成功案例</a></li>
-                <li><a href="/job.html" class="active">招聘信息</a></li>
+                <li><a href="/honor.html">资质荣誉</a></li>
+                <li><a href="/case.html">经典案例</a></li>
+                <li><a href="/job.html">招聘信息</a></li>
                 <li><a href="/contact.html">联系我们</a></li>
+                <li><a href="/liuyan.html">留言板</a></li>
             </ul>
         </div>
     </div>
