--- a/FJYL.Web/index.html
+++ b/FJYL.Web/index.html
@@ -18,18 +18,20 @@
                 <ul class="menu">
                     <li class="first"><a href="/" class="active">首页</a></li>
                     <li><a href="/about.html">公司简介</a></li>
-                    <li><a href="/case.html">成功案例</a></li>
+                    <li><a href="/honor.html">资质荣誉</a></li>
+                    <li><a href="/case.html">经典案例</a></li>
                     <li><a href="/job.html">招聘信息</a></li>
                     <li><a href="/contact.html">联系我们</a></li>
+                    <li><a href="/liuyan.html">留言板</a></li>
                 </ul>
             </div>
         </div>
         <div class="flexslider">
             <ul class="slides">
-                <li style="background:url(img/img1.jpg) 50% 0 no-repeat;"></li>
-                <li style="background:url(img/img2.jpg) 50% 0 no-repeat;"></li>
-                <li style="background:url(img/img3.jpg) 50% 0 no-repeat;"></li>
-                <li style="background:url(img/img4.jpg) 50% 0 no-repeat;"></li>
+                <li style="background:url(img/img1.jpg) 50% 0 no-repeat;"><a href="/case.html"></a></li>
+                <li style="background:url(img/img2.jpg) 50% 0 no-repeat;"><a href="/case.html"></a></li>
+                <li style="background:url(img/img3.jpg) 50% 0 no-repeat;"><a href="/case.html"></a></li>
+                <li style="background:url(img/img4.jpg) 50% 0 no-repeat;"><a href="/case.html"></a></li>
             </ul>
         </div>
         <div class="clear"></div>
